force-app/main/default/objects/Invoice_Type_Configuration__c/Invoice_Type_Configuration__c.object-meta.xml
<CustomObject>
    <label>Invoice Type Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Type Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>