force-app/main/default/objects/Invoice_Type_Configuration__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Clients__c</referenceTo>
    <relationshipLabel>Invoice Type Configurations</relationshipLabel>
    <relationshipName>Invoice_Type_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>