force-app/main/default/objects/Invoice_Type_Configuration__c/fields/Contact_Persons__c.field-meta.xml
<CustomField>
    <fullName>Contact_Persons__c</fullName>
    <label>Contact Persons</label>
    <type>TextArea</type>
</CustomField>