force-app/main/default/objects/Invoice_Type_Configuration__c/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jurisdiction</valueSetName>
    </valueSet>
</CustomField>