force-app/main/default/objects/Invoice_Type_Configuration__c/fields/Invoice_Currency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Currency__c</fullName>
    <label>Invoice Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>